--- a/WorkflowMVC/Views/Home/TicketCreator.cshtml
+++ b/WorkflowMVC/Views/Home/TicketCreator.cshtml
@@ -1,4 +1,5 @@
-﻿@model WorkFlowMySql.Data.TicketModel
+﻿
+@model WorkflowMVC.Models.Ticket
 
 @{
     ViewBag.Title = "TicketCreator";
@@ -6,9 +7,3 @@
 
 <h2>TicketCreator</h2>
 
-@using (Html.BeginForm("CreateTicket", "Home", FormMethod.Post))
-    {
-
-
-
-}
