--- a/WorkflowMVC/Views/Home/TicketCreator.cshtml
+++ b/WorkflowMVC/Views/Home/TicketCreator.cshtml
@@ -1,4 +1,4 @@
-﻿@model WorkFlowMySql.Data.TicketModel
+﻿@model WorkflowMVC.Models.Ticket
 
 @{
     ViewBag.Title = "TicketCreator";
@@ -6,11 +6,7 @@
 
 <h2>TicketCreator</h2>
 
-@{
-    ViewBag.Title = "TicketCreator";
-}
 
-<h2>TicketCreator</h2>
 @using (Html.BeginForm("CreateTicket", "Home", FormMethod.Post))
 {
     <form>
@@ -26,6 +22,23 @@
                     <label class="col-form-label" for="inputDefault">Ticket Content</label>
                     @Html.PasswordFor(m => m.Content, new { @class = "form-control form-control-lg" })
                 </div>
+            </div>
+            <div class="col-md-12">
+                <fieldset class="form-group">
+                    <legend>Choose priority</legend>
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            @Html.RadioButtonFor(m => m.Priority, "Normal", new { @checked = true })
+                            Normal
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            @Html.RadioButtonFor(m => m.Priority, "Critical")
+                            Critical
+                        </label>
+                    </div>
+                </fieldset>
             </div>
 
             <div>
