--- a/WorkflowMVC/Views/Home/TicketList.cshtml
+++ b/WorkflowMVC/Views/Home/TicketList.cshtml
@@ -15,19 +15,21 @@
         <table class="table table-striped table-hover table-bordered">
             <thead class="thead-dark">
             <tr>
-                <th>#</th>
-                <th>Column heading</th>
-                <th>Column heading</th>
+                <th>Ticket ID</th>
+                <th>Ticket Header</th>
+                <th>Register Date</th>
+                <th>Deadline</th>
             </tr>
             </thead>
             <tbody>
                     
             @foreach (Ticket ticket in Model)
             {
-                <tr>
-                    <td>1</td>
+                 <tr>
+                    <td>@ticket.TicketId</td>
                     <td>@ticket.Header</td>
-                    <td>@ticket.Content</td>
+                     <td>@ticket.RegisterDate</td>
+                     <td>@ticket.Deadline</td>
                 </tr>
             }
             </tbody>
